Fix radclient path

--- a/roles/radiusdesk/templates/coova/chilli.config.j2
+++ b/roles/radiusdesk/templates/coova/chilli.config.j2
@@ -26,4 +26,4 @@ HS_WWWBIN=/etc/chilli/wwwsh
 HS_PROVIDER=RD-Installer
 HS_PROVIDER_LINK=http://muffycompo.github.io/radiusdesk-installer/
 HS_LOC_NAME="RD Installer"
-HS_COAPORT=3799
+HS_COAPORT={{ coovachilli_coaport }}
