--- a/roles/radiusdesk/templates/coova/chilli.config.j2
+++ b/roles/radiusdesk/templates/coova/chilli.config.j2
@@ -10,7 +10,7 @@ HS_UAMUIPORT=4990
 HS_NASID=localhost
 HS_RADIUS={{ coovachilii_radius_server1 }}
 HS_RADIUS2={{ coovachilii_radius_server2 }}
-HS_RADSECRET=testing123
+HS_RADSECRET={{ freeradius_secret }}
 HS_UAMSECRET={{ coovachilii_uam_secret }}
 HS_UAMALIASNAME=chilli
 HS_SSID="Struisbaai"
