--- a/roles/radiusdesk/templates/radius/radmin_wrapper.pl.j2
+++ b/roles/radiusdesk/templates/radius/radmin_wrapper.pl.j2
@@ -36,13 +36,17 @@ if($arg1 eq 'stats'){
 #___ Start ____
 if($arg1 eq 'start'){
     #system("/etc/init.d/radiusd start");
+    #system("service freeradius start");
     system("service {{ freeradius_service_name }} start");
+    #system("/etc/init.d/freeradius start");
 }
 
 #___ Stop ____
 if($arg1 eq 'stop'){
     #system("/etc/init.d/radiusd stop");
+    #system("service freeradius stop");
     system("service {{ freeradius_service_name }} stop");
+    #system("/etc/init.d/freeradius stop");
 }
 
 
