Replace Freeradius 2 with Freeradius 3

--- a/roles/radiusdesk/templates/maomuffy.repo.j2
+++ b/roles/radiusdesk/templates/maomuffy.repo.j2
@@ -3,4 +3,4 @@ name=MAO Muffy RadiusDesk Repo - $basearch
 baseurl=http://yum.maomuffy.com/el{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/Packages/
 enabled=1
 gpgcheck=1
-gpgkey=http://yum.maomuffy.com/el{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/RPM-GPG-KEY-maomuffy
+gpgkey=http://yum.maomuffy.com/el{{ ansible_distribution_major_version }}/RPM-GPG-KEY-maomuffy
