--- a/roles/radiusdesk/templates/nginx/php_fpm.www.conf.j2
+++ b/roles/radiusdesk/templates/nginx/php_fpm.www.conf.j2
@@ -1,6 +1,9 @@
 [www]
+{% if ansible_distribution_version >= '16' and ansible_distribution == 'Ubuntu' %}
+listen =  {{ php7_fpm_socket }}
+{% else %}
 listen =  {{ php_fpm_socket }}
-#listen.allowed_clients = 127.0.0.1
+{% endif %}
 listen.owner = {{ web_user }}
 listen.group = {{ web_group }}
 listen.mode = 0666
