Add Freeradius Service Name

--- a/roles/radiusdesk/templates/radius/radiusd.conf.j2
+++ b/roles/radiusdesk/templates/radius/radiusd.conf.j2
@@ -61,7 +61,7 @@ radacctdir = ${logdir}/radacct
 
 #
 #  name of the running server.  See also the "-n" command-line option.
-name = radiusd
+name = {{ freeradius_service_name }}
 
 #  Location of config and logfiles.
 confdir = ${raddbdir}
