--- a/roles/radiusdesk/templates/nginx/nginx.conf.j2
+++ b/roles/radiusdesk/templates/nginx/nginx.conf.j2
@@ -45,7 +45,7 @@ http {
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript 
 	application/javascript text/x-js; 
 	gzip_buffers 16 8k; 
-	gzip_disable "MSIE [1-6]\.(?!.*SV1)"; 
+	gzip_disable "msie6"; 
 
 
         ##
