--- a/roles/radiusdesk/templates/radius/radmin_wrapper.pl.j2
+++ b/roles/radiusdesk/templates/radius/radmin_wrapper.pl.j2
@@ -37,7 +37,11 @@ if($arg1 eq 'stats'){
 if($arg1 eq 'start'){
     #system("/etc/init.d/radiusd start");
     #system("service freeradius start");
+    {% if (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= '16') or (ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '7') %}
+    system("systemctl start {{ freeradius_service_name }}");
+    {% else %}
     system("service {{ freeradius_service_name }} start");
+    {% endif %}
     #system("/etc/init.d/freeradius start");
 }
 
@@ -45,7 +49,11 @@ if($arg1 eq 'start'){
 if($arg1 eq 'stop'){
     #system("/etc/init.d/radiusd stop");
     #system("service freeradius stop");
+    {% if (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= '16') or (ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '7') %}
+    system("systemctl stop {{ freeradius_service_name }}");
+    {% else %}
     system("service {{ freeradius_service_name }} stop");
+    {% endif %}
     #system("/etc/init.d/freeradius stop");
 }
 
