Fix Coova-Chilli JSON support

--- a/roles/radiusdesk/templates/coova/chilli.config.j2
+++ b/roles/radiusdesk/templates/coova/chilli.config.j2
@@ -18,7 +18,7 @@ HS_NASIP=127.0.0.1
 HS_UAMSERVER=$HS_UAMLISTEN
 HS_UAMFORMAT=http://\$HS_UAMLISTEN/cake2/rd_cake/dynamic_details/chilli_browser_detect/
 HS_MACAUTH=on
-HS_TCP_PORTS="80 22 23 443 8000"
+HS_TCP_PORTS="80 23 443 8000"
 HS_MODE=hotspot
 HS_TYPE=chillispot
 HS_WWWDIR=/etc/chilli/www
