--- a/roles/radiusdesk/templates/coova/chilli.init.Debian.j2
+++ b/roles/radiusdesk/templates/coova/chilli.init.Debian.j2
@@ -16,12 +16,12 @@ DESC=chilli
 
 START_CHILLI=0
 
-if [ -f {{ coovachilli_default_conf }} ] ; then
-   . {{ coovachilli_default_conf }}
+if [ -f /etc/default/chilli ] ; then
+   . /etc/default/chilli
 fi
 
 if [ "$START_CHILLI" != "1" ] ; then
-   echo "Chilli default off. Look at {{ coovachilli_default_conf }}"
+   echo "Chilli default off. Look at /etc/default/chilli"
    exit 0
 fi
 
@@ -29,21 +29,21 @@ test -f $DAEMON || exit 0
 
 . /etc/chilli/functions
 
-MULTI=$(ls {{ coovachilli_conf_dir }}/*/chilli.conf 2>/dev/null)
+MULTI=$(ls /etc/chilli/*/chilli.conf 2>/dev/null)
 [ -z "$DHCPIF" ] && [ -n "$MULTI" ] && {
     for c in $MULTI;
     do
-        echo "Found configuration $c"
-        DHCPIF=$(basename $(echo $c|sed 's#/chilli.conf##'))
-        export DHCPIF
-        echo "Running DHCPIF=$DHCPIF $0 $*"
-        sh $0 $*
+    echo "Found configuration $c"
+    DHCPIF=$(basename $(echo $c|sed 's#/chilli.conf##'))
+    export DHCPIF
+    echo "Running DHCPIF=$DHCPIF $0 $*"
+    sh $0 $*
     done
     exit
 }
 
 if [ -n "$DHCPIF" ]; then
-    CONFIG={{ coovachilli_conf_dir }}/$DHCPIF/chilli.conf
+    CONFIG=/etc/chilli/$DHCPIF/chilli.conf
 else
     CONFIG=/etc/chilli.conf
 fi
@@ -60,86 +60,86 @@ prog="chilli"
 
 case "$1" in
   start)
-        echo -n "Starting $DESC: "
-        /sbin/modprobe tun >/dev/null 2>&1
-        echo 1 > /proc/sys/net/ipv4/ip_forward
+    echo -n "Starting $DESC: "
+    /sbin/modprobe tun >/dev/null 2>&1
+    echo 1 > /proc/sys/net/ipv4/ip_forward
 
-        writeconfig
-        radiusconfig
+    writeconfig
+    radiusconfig
 
-        test ${HS_ADMINTERVAL:-0} -gt 0 && {
+    test ${HS_ADMINTERVAL:-0} -gt 0 && {
             (crontab -l 2>&- | grep -v $0
-                echo "*/$HS_ADMINTERVAL * * * * $0 radconfig"
-                ) | crontab - 2>&-
-        }
+        echo "*/$HS_ADMINTERVAL * * * * $0 radconfig"
+        ) | crontab - 2>&-
+    }
 
-        #NAT mod
-        iptables -F POSTROUTING -t nat
-        iptables -I POSTROUTING -t nat -o $HS_WANIF -j MASQUERADE
-        #END NAT mod
+    # NAT for RADIUSDesk
+    iptables -F POSTROUTING -t nat
+    iptables -I POSTROUTING -t nat -o $HS_WANIF -j MASQUERADE
+    # END NAT for RADIUSDesk
+    
+    ifconfig $HS_LANIF 0.0.0.0
 
-        ifconfig $HS_LANIF 0.0.0.0
-
-        start-stop-daemon --start --quiet --pidfile /var/run/$NAME.$HS_LANIF.pid \
-                --exec $DAEMON -- -c $CONFIG
-        RETVAL=$?
-        echo "$NAME."
-        ;;
+    start-stop-daemon --start --quiet --pidfile /var/run/$NAME.$HS_LANIF.pid \
+        --exec $DAEMON -- -c $CONFIG
+    RETVAL=$?
+    echo "$NAME."
+    ;;
 
     checkrunning)
-        check=`start-stop-daemon --start --exec $DAEMON --test`
-        if [ x"$check" != x"$DAEMON already running." ] ; then
+    check=`start-stop-daemon --start --exec $DAEMON --test`
+    if [ x"$check" != x"$DAEMON already running." ] ; then
             $0 start
-        fi
-        ;;
+    fi
+    ;;
 
     radconfig)
-        [ -e $MAIN_CONF ] || writeconfig
-        radiusconfig
-        ;;
+    [ -e $MAIN_CONF ] || writeconfig
+    radiusconfig
+    ;;
 
     restart)
-        $0 stop
-        sleep 1
-        $0 start
-        RETVAL=$?
-        ;;
+    $0 stop
+    sleep 1
+    $0 start
+    RETVAL=$?
+    ;;
 
     stop)
-        echo -n "Stopping $DESC: "
+    echo -n "Stopping $DESC: "
 
-        crontab -l 2>&- | grep -v $0 | crontab -
+    crontab -l 2>&- | grep -v $0 | crontab -
 
 
-        start-stop-daemon --oknodo --stop --quiet --pidfile /var/run/$NAME.$HS_LANIF.pid \
-            --exec $DAEMON
-        echo "$NAME."
-        ;;
+    start-stop-daemon --oknodo --stop --quiet --pidfile /var/run/$NAME.$HS_LANIF.pid \
+        --exec $DAEMON
+    echo "$NAME."
+    ;;
 
     reload)
-        echo "Reloading $DESC."
-        start-stop-daemon --stop --signal 1 --quiet --pidfile \
-            /var/run/$NAME.$HS_LANIF.pid --exec $DAEMON
-        ;;
+    echo "Reloading $DESC."
+    start-stop-daemon --stop --signal 1 --quiet --pidfile \
+        /var/run/$NAME.$HS_LANIF.pid --exec $DAEMON
+    ;;
 
     condrestart)
-        check=`start-stop-daemon --start --exec $DAEMON --test`
-        if [ x"$check" != x"$DAEMON already running." ] ; then
+    check=`start-stop-daemon --start --exec $DAEMON --test`
+    if [ x"$check" != x"$DAEMON already running." ] ; then
             $0 restart
             RETVAL=$?
-        fi
-        ;;
+    fi
+    ;;
 
     status)
-        status chilli
-        RETVAL=$?
-        ;;
+    status chilli
+    RETVAL=$?
+    ;;
 
     *)
-        N=/etc/init.d/$NAME
-        echo "Usage: $N {start|stop|restart|condrestart|status|reload|radconfig}" >&2
-        exit 1
-        ;;
+    N=/etc/init.d/$NAME
+    echo "Usage: $N {start|stop|restart|condrestart|status|reload|radconfig}" >&2
+    exit 1
+    ;;
 esac
 
 exit 0
