Fix CoovaChilli init script line encoding

--- a/roles/radiusdesk/templates/coova/chilli.init.Debian.j2
+++ b/roles/radiusdesk/templates/coova/chilli.init.Debian.j2
@@ -1,5 +1,5 @@
 #! /bin/sh
-### BEGIN INIT INFO
+#### BEGIN INIT INFO
 # Provides:          chilli
 # Required-Start:    $remote_fs $syslog $network
 # Required-Stop:     $remote_fs $syslog $network
