Fix CoovaChilli Variable Name Typo

--- a/roles/radiusdesk/templates/MESHdesk.php.j2
+++ b/roles/radiusdesk/templates/MESHdesk.php.j2
@@ -7,12 +7,12 @@
 
 //_______________________________________________
 //== Pre-set values for the Captive Portals
-$config['Meshes']['captive_portal']['radius_1']         = '{{ coovachilii_radius_server1 }}'; // This will be the public IP Address of the FreeRADIUS / RADIUSdesk
+$config['Meshes']['captive_portal']['radius_1']         = '{{ coovachilli_radius_server1 }}'; // This will be the public IP Address of the FreeRADIUS / RADIUSdesk
 //$config['ApProfiles']['captive_portal']['radius_2']         = '198.27.111.78'; //Optional second fallback RADIUS
 $config['Meshes']['captive_portal']['radius_secret']    = '{{ freeradius_secret }}'; //Change this to the common site wide secret used by Dynamic RADIUS Clients
 //Use DNS name in ual_url to look more professional / or IP Address 
-$config['Meshes']['captive_portal']['uam_url']          = 'http://{{ coovachilii_radius_server1 }}/cake2/rd_cake/dynamic_details/chilli_browser_detect/'; 
-$config['Meshes']['captive_portal']['uam_secret']       = '{{ coovachilii_uam_secret }}'; //Usually you will not change this value
+$config['Meshes']['captive_portal']['uam_url']          = 'http://{{ coovachilli_radius_server1 }}/cake2/rd_cake/dynamic_details/chilli_browser_detect/'; 
+$config['Meshes']['captive_portal']['uam_secret']       = '{{ coovachilli_uam_secret }}'; //Usually you will not change this value
 
 //$config['ApProfiles']['captive_portal']['walled_garden'] = "www.radiusdesk.com,www.google.com"; //Optional
 $config['Meshes']['captive_portal']['swap_octet']       = true;
