--- a/roles/radiusdesk/templates/coova/chilli.config.j2
+++ b/roles/radiusdesk/templates/coova/chilli.config.j2
@@ -1,17 +1,17 @@
-HS_WANIF={{ coovachilii_wan_if }}
-HS_LANIF={{ coovachilii_lan_if }}
-HS_NETWORK={{ coovachilii_network_addr }}
-HS_NETMASK={{ coovachilii_network_subnet }}
-HS_UAMLISTEN={{ coovachilii_server_ip }}
-HS_UAMPORT={{ coovachilii_uam_port }}
-HS_DNS1={{ coovachilii_dns_server1 }}
-HS_DNS2={{ coovachilii_dns_server2 }}
+HS_WANIF={{ coovachilli_wan_if }}
+HS_LANIF={{ coovachilli_lan_if }}
+HS_NETWORK={{ coovachilli_network_addr }}
+HS_NETMASK={{ coovachilli_network_subnet }}
+HS_UAMLISTEN={{ coovachilli_server_ip }}
+HS_UAMPORT={{ coovachilli_uam_port }}
+HS_DNS1={{ coovachilli_dns_server1 }}
+HS_DNS2={{ coovachilli_dns_server2 }}
 HS_UAMUIPORT=4990
 HS_NASID=localhost
-HS_RADIUS={{ coovachilii_radius_server1 }}
-HS_RADIUS2={{ coovachilii_radius_server2 }}
+HS_RADIUS={{ coovachilli_radius_server1 }}
+HS_RADIUS2={{ coovachilli_radius_server2 }}
 HS_RADSECRET={{ freeradius_secret }}
-HS_UAMSECRET={{ coovachilii_uam_secret }}
+HS_UAMSECRET={{ coovachilli_uam_secret }}
 HS_UAMALIASNAME=chilli
 HS_SSID="Struisbaai"
 HS_NASIP=127.0.0.1
