--- a/roles/radiusdesk/templates/uam.php.j2
+++ b/roles/radiusdesk/templates/uam.php.j2
@@ -1,5 +1,5 @@
 <?php
-    $uamsecret = '{{ coovachilii_uam_secret }}';
+    $uamsecret = '{{ coovachilli_uam_secret }}';
 
     //We need 3 things
     $callback = false;
