Update MAOMUFFY repo Link

--- a/roles/radiusdesk/templates/maomuffy.repo.j2
+++ b/roles/radiusdesk/templates/maomuffy.repo.j2
@@ -1,6 +1,6 @@
 [maomuffy]
 name=MAO Muffy RadiusDesk Repo - $basearch
-baseurl=http://maomuffy.com/yum/el{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/Packages/
+baseurl=http://atapoly-bauchi.edu.ng/maomuffy/yum/el{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/Packages/
 enabled=1
 gpgcheck=1
-gpgkey=http://maomuffy.com/yum/el{{ ansible_distribution_major_version }}/RPM-GPG-KEY-maomuffy
+gpgkey=http://atapoly-bauchi.edu.ng/maomuffy/yum/el{{ ansible_distribution_major_version }}/RPM-GPG-KEY-maomuffy
