--- a/roles/radiusdesk/templates/nginx/nginx.default.conf.j2
+++ b/roles/radiusdesk/templates/nginx/nginx.default.conf.j2
@@ -35,8 +35,10 @@ server {
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         #       # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-        {% if ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= '16' %}
+        {% if ansible_distribution == 'Ubuntu' and ansible_distribution_major_version == '16' %}
         fastcgi_pass unix:{{ php7_fpm_socket }};
+        {% if ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= '17' %}
+        fastcgi_pass unix:{{ php71_fpm_socket }};
         {% else %}
         fastcgi_pass unix:{{ php_fpm_socket }};
         {% endif %}
